tests/compile_failures/attributes/unnammed_struct_fields.rs
use dioxus_sugar::attributes;

#[attributes(div)]
struct Props(String);

fn main() {}